//版本号
syntax = "proto3";
// ./service 表示在下 ./service 生成
// service 则表示生成的go 文件的包名
option go_package = "./service;service";

// 包名
package service;

// 消息
message HelloRequest {
    string msg = 1;
    //可选 - 可选值会被编译为指针类型
    optional string msg2 = 2;
    //可重复 - 在go 中表现为切片
    repeated string address = 3;
}

// 消息 - 响应
message HelloReply {
    string msg = 1;
}

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}